wavy divideer botton alignment fixed

--- a/styles/page.scss
+++ b/styles/page.scss
@@ -139,6 +139,7 @@ background: linear-gradient(
     height: 120px;
     z-index: 1;
     overflow: hidden;
+    bottom: -1rem;
     
     .wave-svg {
       width: 100%;
